fix: add spacing between title pairs.

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -588,6 +588,7 @@ body.rtl {
     }
     .title-value-pair {
       display: inline-block;
+      margin-inline-end: 0.5rem;
     }
   }
 }
